--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
-  "types": "./types",
+  "types": "./dist/types",
   "files": [
     "/dist"
   ],
